--- a/Future_Engineering/titanic_uygulama.ipynb
+++ b/Future_Engineering/titanic_uygulama.ipynb
@@ -77,13 +77,13 @@
    "id": "8060eace",
    "metadata": {},
    "source": [
-    "**Adım_4:** `shape`komutu ile veri setinin satır ve sütun sayısını öğrenin\n",
+    "**Adım_4:** **`shape`**komutu ile veri setinin satır ve sütun sayısını öğrenin\n",
     "\n",
-    "Bu kod satırı, Pandas DataFrame olan \"titanic\" için şeklini (shape) döndürür. DataFrame'in şekli, satır ve sütun sayısını içeren bir tuple'dır. Genellikle `(satır_sayısı, sütun_sayısı)` şeklinde ifade edilir.\n",
+    "Bu kod satırı, Pandas DataFrame olan \"titanic\" için şeklini (shape) döndürür. DataFrame'in şekli, satır ve sütun sayısını içeren bir tuple'dır. Genellikle **`(satır_sayısı, sütun_sayısı)`** şeklinde ifade edilir.\n",
     "\n",
-    "Eğer `titanic` DataFrame'i önceden tanımlanmışsa ve veri seti başarıyla yüklendiyse, bu kod size DataFrame'in şeklini verecektir.\n",
+    "Eğer **`titanic`** DataFrame'i önceden tanımlanmışsa ve veri seti başarıyla yüklendiyse, bu kod size DataFrame'in şeklini verecektir.\n",
     "\n",
-    "Bu kodun sonucu, örneğin `(satır_sayısı, sütun_sayısı)` biçiminde bir çift olacaktır. Örneğin, eğer 1000 satır ve 10 sütun varsa, çıktı `(1000, 10)` olacaktır."
+    "Bu kodun sonucu, örneğin **`(satır_sayısı, sütun_sayısı)`** biçiminde bir çift olacaktır. Örneğin, eğer 1000 satır ve 10 sütun varsa, çıktı **`(1000, 10)`** olacaktır."
    ]
   },
   {
