--- a/Python/pratik_soruları/Örnek Sorular.ipynb
+++ b/Python/pratik_soruları/Örnek Sorular.ipynb
@@ -1174,10 +1174,56 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af656b2e",
+   "id": "e1f8cc3b",
    "metadata": {},
    "source": [
     "**Alıştırma_1**\n",
+    "\n",
+    "Aynı kodu **`for`** kullanarak oluşturunuz."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee129ba0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collatz_zinciri = []    # Collatz dizisinin her bir zinciri için boş bir liste\n",
+    "son_zincir = []         # En son hesaplanan zincirin \n",
+    "en_uzun_zincir = []     # En uzun zincirin \n",
+    "\n",
+    "# 2 ile 1 milyon arasındaki başlangıç değerleri için döngü\n",
+    "for n in range(2, 1000000):\n",
+    "    collatz_zinciri.clear()  # Collatz dizisi listesini temizle\n",
+    "\n",
+    "    # Collatz dizisini hesapla\n",
+    "    collatz_zinciri = [n]\n",
+    "    while n != 1:\n",
+    "        if n % 2 == 0:\n",
+    "            collatz_zinciri.append(n)\n",
+    "            n = n // 2          # n'yi 2'ye bölelim\n",
+    "        else:\n",
+    "            n = 3 * n + 1       # n'yi 3 ile çarpıp 1 ekleyelim\n",
+    "            collatz_zinciri.append(n)\n",
+    "    \n",
+    "    # Hesaplanan dizinin kopyasını al\n",
+    "    son_zincir = collatz_zinciri.copy()\n",
+    "\n",
+    "    # Eğer bu zincir daha uzunsa, en uzun zinciri güncelle\n",
+    "    if len(son_zincir) > len(en_uzun_zincir):\n",
+    "        en_uzun_zincir = son_zincir.copy()\n",
+    "\n",
+    "# En uzun zincirin başlangıç değerini ekrana yazdır\n",
+    "print(f\"En uzun zincirin başlangıç değeri {en_uzun_zincir[0]} olarak hesaplanmıştır.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af656b2e",
+   "metadata": {},
+   "source": [
+    "**Alıştırma_2**\n",
     "\n",
     "**Yukarıdaki kodun çalışması çok uzun sürdüğü için internet üzerinden hazır kod bulunmuştur;**\n",
     "\n",
