--- a/Python/pratik_soruları/Algoritma-Çözümleri.ipynb
+++ b/Python/pratik_soruları/Algoritma-Çözümleri.ipynb
@@ -36,19 +36,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "id": "55b2a4dd",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[None, None, 13, 17, 42, 27, 28, 18, 16, 39, 29]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hash Tablosu = [None, None, 13, 17, 42, 27, 28, 18, 16, 39, 29]\n"
+     ]
     }
    ],
    "source": [
@@ -83,7 +80,7 @@
     "                    # Eğer yeni konum da dolu ise bir önceki konuma git\n",
     "                    konum -= 1\n",
     "\n",
-    "    return hashTable\n",
+    "    return print(f\"Hash Tablosu = {hashTable}\")\n",
     "\n",
     "# Test verileri\n",
     "data = [27, 18, 29, 28, 39, 13, 16, 42, 17]\n",
@@ -309,19 +306,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "id": "86ffb5d9",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[None, None, 13, None, None, 27, 28, 18, 29, 39, 16]"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hash Tablosu = [None, None, 13, None, None, 27, 28, 18, 29, 39, 16]\n"
+     ]
     }
    ],
    "source": [
@@ -356,7 +350,7 @@
     "                    i += 1\n",
     "                    break\n",
     "                    \n",
-    "    return hashTable\n",
+    "    return print(f\"Hash Tablosu = {hashTable}\")\n",
     "\n",
     "# Test verileri\n",
     "data = [27, 18, 29, 28, 39, 13, 16]\n",
@@ -368,10 +362,65 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f4eee20",
+   "id": "6b2d55af",
    "metadata": {},
    "source": [
     "### Alıştırma_2\n",
+    "\n",
+    "Progressive Overflow yöntemi ile \"Alıştırma_1\" de olduğu gibi Hash Tablosunu oluşturunuz. Algoritmayı tasarlarken **`enumerate`** kullanarak kodu kısaltınız.\n",
+    "\n",
+    "\n",
+    "Hash(key) = key mod 11\n",
+    "\n",
+    "    data=[27,18,29,28,39,13,16,42,17] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "57bbde72",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hash Tablosu = [None, None, 13, None, None, 27, 28, 18, 29, 39, 16]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def progressive_overflow(data, hash_table):\n",
+    "    for index, veri in enumerate(data):\n",
+    "        konum = veri % 11  # Verinin hash tablosundaki konumu hesapla\n",
+    "        \n",
+    "        # Eğer konumda değer yoksa, direkt olarak veriyi ekleyebiliriz\n",
+    "        if hash_table[konum] == None:\n",
+    "            hash_table[konum] = veri\n",
+    "        else:\n",
+    "            # Çakışma durumu: Bir sonraki boş konumu bulana kadar ilerle\n",
+    "            while hash_table[konum] != None:\n",
+    "                konum += 1\n",
+    "            \n",
+    "            # Boş konumu bulduktan sonra veriyi ekleyebiliriz\n",
+    "            hash_table[konum] = veri\n",
+    "    \n",
+    "    return print(f\"Hash Tablosu = {hash_table}\")\n",
+    "\n",
+    "# Örnek veri ve hash table\n",
+    "data = [27, 18, 29, 28, 39, 13, 16]\n",
+    "hash_table = [None] * 11\n",
+    "\n",
+    "# Progressive Overflow Hashing uygula\n",
+    "progressive_overflow(data, hash_table)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f4eee20",
+   "metadata": {},
+   "source": [
+    "### Alıştırma_3\n",
     "\n",
     "Progressive Overflow yöntemi ile Hash Tablosu'nu **`Linked List`** kullanarak oluşturunuz.\n",
     "\n",
@@ -462,7 +511,7 @@
    "id": "57961197",
    "metadata": {},
    "source": [
-    "### Alıştırma_3\n",
+    "### Alıştırma_4\n",
     "\n",
     "Progressive Overflow yöntemi ile Hash Tablosu'nu **`Linked List`** kullanarak oluşturunuz. Algoritmayı tasarlarken **`class`** kullanınız.\n",
     "\n",
@@ -473,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "id": "47976551",
    "metadata": {},
    "outputs": [
@@ -482,7 +531,7 @@
      "output_type": "stream",
      "text": [
       "Hash Tablo: [None, None, 13, None, None, 27, 28, 18, None, None, None]\n",
-      "Gelişen Tablo: [None, None, None, None, None, 16, 39, 29, None, None, None]\n"
+      "Linked List: [None, None, None, None, None, 16, 39, 29, 5, None, None]\n"
      ]
     }
    ],
@@ -516,11 +565,11 @@
     "    def display_tables(self):\n",
     "        # Ana tablo ve gelişen tabloyu ekrana yazdır\n",
     "        print(\"Hash Tablo:\", self.home_table)\n",
-    "        print(\"Gelişen Tablo:\", self.overflow_table)\n",
+    "        print(\"Linked List:\", self.overflow_table)\n",
     "\n",
     "\n",
     "# Verilen örnek değerleri tabloya ekleyelim\n",
-    "items = [27, 18, 29, 28, 39, 13, 16]\n",
+    "items = [27, 18, 29, 28, 39, 13, 16,5]\n",
     "\n",
     "# Progressive Overflow tablosunu oluşturalım\n",
     "hash_table = ProgressiveOverflowHashTable(size=11)\n",
@@ -530,6 +579,67 @@
     "\n",
     "# Tabloyu yazdıralım\n",
     "hash_table.display_tables()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "140c256c",
+   "metadata": {},
+   "source": [
+    "### Alıştırma_5\n",
+    "\n",
+    "Progressive Overflow yöntemi ile Hash Tablosu'nu **`Linked List`** kullanarak oluşturunuz. Algoritmayı tasarlarken **`enumerate`** kullanarak kodu kısaltınız.\n",
+    "\n",
+    "Hash(key) = key mod 11\n",
+    "\n",
+    "    data=[27,18,29,28,39,13,16,5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "aa02320e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hash Tablosu = [None, None, 13, None, None, 27, 28, 18, 5, None, None] \n",
+      "Linked List = [None, None, None, None, None, 16, 39, 29, None, None, None]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def progressive_overflow(data, hash_table, linked_list):\n",
+    "    for index, veri in enumerate(data):\n",
+    "        konum = veri % 11  # Verinin hash tablosundaki konumu hesapla\n",
+    "        \n",
+    "        # Eğer konumda değer yoksa, direkt olarak veriyi hash table'a ekleyebiliriz\n",
+    "        if hash_table[konum] == None:\n",
+    "            hash_table[konum] = veri\n",
+    "        \n",
+    "        # Eğer konumda hash table'da değer varsa, linked list kullanarak çakışmayı çöz\n",
+    "        elif linked_list[konum] == None:\n",
+    "            linked_list[konum] = veri\n",
+    "            \n",
+    "        else:\n",
+    "            # Çakışma durumu: Bir sonraki boş konumu bulana kadar ilerle\n",
+    "            while hash_table[konum] != None:\n",
+    "                konum += 1\n",
+    "            \n",
+    "            # Boş konumu bulduktan sonra veriyi hash table'a ekleyebiliriz\n",
+    "            hash_table[konum] = veri\n",
+    "    \n",
+    "    return print(f'Hash Tablosu = {hash_table} \\nLinked List = {linked_list}')\n",
+    "\n",
+    "# Örnek veri, hash table ve linked list\n",
+    "data = [27, 18, 29, 28, 39, 13, 16, 5]\n",
+    "hash_table = [None] * 11\n",
+    "linked_list = [None] * 11\n",
+    "\n",
+    "# Progressive Overflow Hashing uygula\n",
+    "progressive_overflow(data, hash_table, linked_list)"
    ]
   },
   {
@@ -566,19 +676,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "id": "f1b88031",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[None, 39, 13, None, None, 27, 28, 18, 16, 29, None]"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hash Tablosu = [None, 39, 13, None, None, 27, 28, 18, 16, 29, None]\n"
+     ]
     }
    ],
    "source": [
@@ -614,7 +721,7 @@
     "                    i += 1\n",
     "                    break\n",
     "                    \n",
-    "    return hashTable\n",
+    "    return print(f\"Hash Tablosu = {hashTable}\")\n",
     "\n",
     "# Test verileri\n",
     "data = [27, 18, 29, 28, 39, 13, 16]\n",
@@ -626,10 +733,64 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b17b1878",
+   "id": "e18ab098",
    "metadata": {},
    "source": [
     "### Alıştırma_2\n",
+    "\n",
+    "Linear Quatient yöntemi ile Hash Tablosunu oluşturunuz. Algoritmayı tasarlarken **`enumerate`** kullanın.\n",
+    "\n",
+    "Hash(key) = key mod 11\n",
+    "\n",
+    "    data=[27,18,29,28,39,13,16]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d47ffc7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hash Tablosu = [None, 39, 13, None, None, 27, 28, 18, 16, 29, None]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def linear_quatient(data, hash_table):\n",
+    "    for index, veri in enumerate(data):\n",
+    "        konum = veri % 11  # Verinin hash tablosundaki konumu hesapla\n",
+    "        \n",
+    "        # Eğer konumda değer yoksa, direkt olarak veriyi hash table'a ekleyebiliriz\n",
+    "        if hash_table[konum] == None:\n",
+    "            hash_table[konum] = veri\n",
+    "        \n",
+    "        else:\n",
+    "            while hash_table[konum] != None:\n",
+    "                # Çakışma durumu: Linear Quotient ile uygun konuma ilerle\n",
+    "                konum = (konum+ int(veri // 11)) % 11\n",
+    "            \n",
+    "            hash_table[konum] = veri\n",
+    "    \n",
+    "    return print(f'Hash Tablosu = {hash_table}')\n",
+    "\n",
+    "# Örnek veri ve hash table\n",
+    "data = [27, 18, 29, 28, 39, 13, 16]\n",
+    "hash_table = [None] * 11\n",
+    "\n",
+    "# Linear Quatient Hashing uygula\n",
+    "linear_quatient(data, hash_table)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b17b1878",
+   "metadata": {},
+   "source": [
+    "### Alıştırma_3\n",
     "\n",
     "Linear Quatient yöntemi ile Hash Tablosunu oluşturunuz. Algoritmayı tasarlarken **`class`** kullanın.\n",
     "\n",
